--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
     "require": {
-        "php": "^7.2.5 || ^8.0",
-        "voku/anti-xss": "~4.1.33",
-        "voku/portable-utf8": "^5.4.51 || ^6.0"
+        "php": "^7.4.15 || ^8.0.2",
+        "voku/anti-xss": "~4.1.36",
+        "voku/portable-utf8": "^6.0.2"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^3.0",
-        "phpunit/phpunit": "^8.5.8 || ^9.3.7"
+        "graham-campbell/analyzer": "^3.1",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
