--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": "^7.4.15 || ^8.0.2",
-        "voku/anti-xss": "~4.1.39",
-        "voku/portable-utf8": "^6.0.4"
+        "voku/anti-xss": "~4.1.41",
+        "voku/portable-utf8": "^6.0.12"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^3.1",
-        "phpunit/phpunit": "^9.5"
+        "graham-campbell/analyzer": "^4.0",
+        "phpunit/phpunit": "^9.6.3 || ^10.0.12"
     },
     "autoload": {
         "psr-4": {
