--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.4.15 || ^8.0.2",
+        "php": "^8.0.2",
         "voku/anti-xss": "~4.1.41",
         "voku/portable-utf8": "^6.0.12"
     },
